# sprite-generator

./: .dockerignore  .gitignore  AI_GAME_STUDIO_ARCHITECTURE_AND_ROADMAP.md  Dockerfile  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
backend/: main.py  requirements.txt
demo/: README.md  app.py  requirements.txt
eval/: animation.py  compare_paths.py  generate_samples.py  godot_export.py  latest_metrics.md  metrics.py  sprite_sheet.py
frontend/: jest.config.js  jest.setup.js  package-lock.json  package.json
gradio_app/: README.md  app.py  requirements.txt
kaggle/: kaggle_complete_train.ipynb  kaggle_data_pipeline.ipynb  kaggle_train_kernel.ipynb  kaggle_transformer_kernel.ipynb  kaggle_vqvae_only.ipynb  kernel-metadata-transformer.json  kernel-metadata.json
scripts/: auto-improve.sh  ci.yml  deploy_spaces.py
tests/: test_animation.py  test_api.py  test_asset_library.py  test_asset_memory.py  test_auth.py  test_billing.py  test_ci.py  test_compare_paths.py  test_data_pipeline.py  test_database_storage.py  test_demo.py  test_deploy_spaces.py  test_docker_config.py  test_exporters.py  test_file_storage.py  test_frontend.py  test_generate_samples.py  test_generator_modules.py  test_godot_export.py  test_ip_adapter.py  test_kaggle.py  test_logging.py  test_lora.py  test_lora_end_to_end.py  test_metrics.py  test_palette_lock.py  test_pipeline_smoke.py  test_project_director.py  test_project_structure.py  test_prompt_builder.py  test_r2_api_integration.py  test_r2_storage.py  test_realesrgan.py  (+14 more)
(+84 files in other folders)
